--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "ember-data": "1.0.0-beta.12",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5",
-    "gun": "0.0.9-c"
+    "glob": "^4.0.5"
   },
   "keywords": [
     "ember-addon",
